# EVM-Solana-Casino-Games

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: deploy.yml
web3/evm/: .gitignore  README.md  foundry.toml  package.json
web3/evm/src/: Blackjack.sol  CoinFlip.sol  Crash.sol  Dice.sol  Jackpot.sol  Lottery.sol  Plinko.sol  Poker.sol  Roulette.sol  Slots.sol
web3/evm/src/interfaces/: ICasinoGame.sol
web3/evm/src/libraries/: CasinoMath.sol
web3/solana/: .gitignore  Anchor.toml  README.md  package.json
web3/solana/programs/blackjack/: Cargo.toml
web3/solana/programs/blackjack/src/: lib.rs
web3/solana/programs/coinflip/: Cargo.toml
web3/solana/programs/coinflip/src/: lib.rs
web3/solana/programs/common/: Cargo.toml
web3/solana/programs/common/src/: errors.rs  lib.rs  state.rs  utils.rs
web3/solana/programs/crash/: Cargo.toml
web3/solana/programs/crash/src/: lib.rs
web3/solana/programs/dice/: Cargo.toml
web3/solana/programs/dice/src/: lib.rs
web3/solana/programs/jackpot/: Cargo.toml
web3/solana/programs/jackpot/src/: lib.rs
web3/solana/programs/lottery/: Cargo.toml
web3/solana/programs/lottery/src/: lib.rs
web3/solana/programs/plinko/: Cargo.toml
web3/solana/programs/plinko/src/: lib.rs
web3/solana/programs/poker/: Cargo.toml
web3/solana/programs/poker/src/: lib.rs
web3/solana/programs/roulette/: Cargo.toml
web3/solana/programs/roulette/src/: lib.rs
web3/solana/programs/slots/: Cargo.toml
web3/solana/programs/slots/src/: lib.rs
